--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -392,6 +392,8 @@ nav .nav-centent .item-list .item img {
     margin: 0;
     padding: 0;
 
+    overflow: hidden;
+
 }
 
 .slide h3 {
@@ -407,9 +409,6 @@ nav .nav-centent .item-list .item img {
 }
 
 .slide {
-
-    background: lightblue;
-
     margin: 0;
     padding: 0;
     width: inherit;
@@ -428,7 +427,7 @@ nav .nav-centent .item-list .item img {
     font-family: Helvetica;
     font-size: 120px;
     color: var(--primary-white);
-
+    z-index: var(--z-index-top2-click);
 
     /* 圖片輪播移動效果 */
     transition: .5s transform ease-in-out;
@@ -455,7 +454,7 @@ input[type="radio"] {
     display: none;
 }
 
-.controls-visible {
+.flow-button-icon-list {
     position: absolute;
     width: 100%;
     bottom: 12px;
@@ -463,7 +462,7 @@ input[type="radio"] {
     z-index: var(--z-index-top2-click);
 }
 
-.controls-visible label {
+.flow-button-icon-list label {
     display: inline-block;
     width: 10px;
     height: 10px;
@@ -472,40 +471,6 @@ input[type="radio"] {
 
     transition: 0.25s;
 }
-
-/*         
-使用 css Selector 選擇器 讓 下方選單radio 做樣式改變
-*/
-input[type="radio"]:nth-of-type(1):checked~.controls-visible label:nth-of-type(1) {
-    background-color: var(--primary-orange-shadow);
-    width: 20px;
-}
-input[type="radio"]:nth-of-type(2):checked~.controls-visible label:nth-of-type(2) {
-    background-color: var(--primary-orange-shadow);
-    width: 20px;
-}
-input[type="radio"]:nth-of-type(3):checked~.controls-visible label:nth-of-type(3) {
-    background-color: var(--primary-orange-shadow);
-    width: 20px;
-}
-input[type="radio"]:nth-of-type(4):checked~.controls-visible label:nth-of-type(4) {
-    background-color: var(--primary-orange-shadow);
-    width: 20px;
-}
-/*  使用 CSS Selector 選擇器 讓 三張卡片左右位移*/
-input[type="radio"]:nth-of-type(1):checked ~.slide{
-    transform: translateX(0%);            
-}
-input[type="radio"]:nth-of-type(2):checked ~.slide{
-    transform: translateX(-100%);            
-}
-input[type="radio"]:nth-of-type(3):checked ~.slide{
-    transform: translateX(-200%);            
-}
-input[type="radio"]:nth-of-type(4):checked ~.slide{
-    transform: translateX(-300%);            
-}
-/* 報價流程-輪播圖 end */
 
 
 /* 服務項目列表 start */
