--- a/docs/style.css
+++ b/docs/style.css
@@ -324,7 +324,7 @@ nav .nav-centent .item-list .item img {
 }
 
 .price-work-flow .text-color-transition {
-    margin-top: 5%;
+    margin-top: 1%;
 
     font-size: 64px;
     font-family: "DFPZongYiW9-B5";
@@ -562,7 +562,7 @@ input[type="radio"] {
 }
 
 .portfolio-block .text-color-transition {
-    margin-top: 6%;
+    margin-top: 1%;
 
     font-size: 64px;
     font-family: "DFPZongYiW9-B5";
@@ -573,8 +573,8 @@ input[type="radio"] {
 }
 
 .portfolio-block p {
-    margin-top: 3%;
-    margin-bottom: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 .computer-background-img {
@@ -787,18 +787,17 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
         height: 105vh;
     }
     .computer-background-img {
-        width: 400px;    
-        height: 300px;       
-        background-image:
-            url("./images/portfolio-slide/bg-computer-little.png");
+        width: 650px;    
+        height: 400px;       
+        background-image:url("./images/portfolio-slide/bg-computer.png");
     }
     .portfolio-slide-list {
         position: relative;
         top: 20px;
-        left: 34px;
+        left: 110px;
     
-        width: 325px;     
-        height: 200px;
+        width: 425px;     
+        height: 275px;
     }
     .portfolio-slide-tab-list .tab {
         height: 20px;
@@ -823,7 +822,7 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
         text-align: center;
     }
     h1 {
-        font-size: 65px;
+        font-size: 60px;
     }
     img {
         max-width: 500px;
@@ -901,8 +900,9 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
         height: 110vh;
     }
     .computer-background-img {
-        width: 90vw;    
-        height: 35vh;       
+        width: 350px;    
+        height: 250px;    
+        /* 不同設備 長寬比不同, vh, vw 設定易破圖 */   
         background-image:
             url("./images/portfolio-slide/bg-computer-little.png");
     }
@@ -911,8 +911,8 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
         top: 20px;
         left: 34px;
     
-        width: 71vw;     
-        height: 23vh;
+        width: 275px;     
+        height: 165px;
     }
     .portfolio-slide-tab-list .tab {
         height: 20px;
