--- a/docs/style.css
+++ b/docs/style.css
@@ -42,6 +42,11 @@
     outline: none; 
     border:none;
 }
+/* 上方導覽列 點選切換 使用滑動 =>  gsap 會與 scroll-behavior 發生衝突, 造成 scroll 卡頓 */
+html {
+    /* scroll-behavior: smooth;  */
+}
+
 section {
     width: 100vw;
     height: 100vh;
@@ -88,6 +93,8 @@ a {
     font-family: "jf-openhuninn-2.0", sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 20px;
+    color: var(--primary-black);
 }
 
 /* 滑鼠滾動 on scroll 動畫效果 start */
@@ -158,7 +165,7 @@ nav .text-bounce-bottom-box {
     width: 7%;
     position: relative;
     top: -15%;
-    left: 22%;
+    left: 25%;
 
     display: flex;
     flex-direction: column;
@@ -241,8 +248,6 @@ nav .nav-centent .item-list .item {
 
 nav .nav-centent .item-list .item a{
     padding: 0 5px;
-    font-size: 20px;
-    color: var(--primary-black);
 }
 
 nav .nav-centent .item-list .item img {
@@ -579,8 +584,8 @@ input[type="radio"] {
 
 .computer-background-img {
     position: relative;
-    width: 600px;    
-    height: 400px;       
+    width: 800px;    
+    height: 500px;           
     background-image:
         url("./images/portfolio-slide/bg-computer.png");
     background-position: center; /* ?? 中央底圖 */
@@ -589,10 +594,11 @@ input[type="radio"] {
 
 .portfolio-slide-list {
     position: relative;
-    top: 45px;
-    left: 95px;
-    width: 400px;    
-    height: 260px;     
+    top: 23px;
+    left: 134px;
+    width: 526px;     
+    height: 353px;
+
     background-color: var(--primary-white);
     list-style: none;
     margin: 0;
@@ -829,10 +835,11 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
     }
 
     /* 上方導覽列 start */
-    .text-bounce-bottom-container .text-bounce-bottom-box .text-bounce-bottom {
-        display: none;
+    .text-bounce-bottom-container .text-bounce-bottom-box {
+        left: 37%;
+        width: 7px;
     }
-    .text-bounce-bottom-container .nav-centent .item-list .item a {
+    .text-bounce-bottom-container .nav-centent .item-list label {
         display: none;
     }
     /* 上方導覽列 end */
