--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -47,6 +47,7 @@ html {
     /* scroll-behavior: smooth;  */
 }
 
+
 section {
     width: 100vw;
     height: 100vh;
@@ -148,7 +149,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 2% auto;
+    margin: 0.5% auto;
     position: fixed;
     z-index: var(--z-index-top1-nav);
 }
@@ -178,10 +179,10 @@ nav .text-bounce-bottom-box .text-bounce-bottom {
     border-radius: 2.5px;
     background: var(--primary-blue);
 
-    animation: text-bounce-button-animation 1s linear;
+    /* animation: text-bounce-button-animation 1s linear; */
 
 }
-
+/* 
 @keyframes text-bounce-button-animation {
     20% {
         width: 5px;
@@ -208,7 +209,7 @@ nav .text-bounce-bottom-box .text-bounce-bottom {
         width: 60px;
     }
 }
-
+ */
 nav .nav-centent {
     min-width: 100px;
     display: flex;
