--- a/docs/style.css
+++ b/docs/style.css
@@ -19,7 +19,7 @@
     --primary-white: #FFFFFF;
     --primary-black: #000000;
     --gray: #231F20;
-    --light-gray: #C3C3C3;
+    --light-gray: #BFBEBB;
     --light-orange: #FFFDFA;
 
     /* 優先等級: 最高, 如: 上方導覽列 */
@@ -44,8 +44,9 @@
 }
 /* 上方導覽列 點選切換 使用滑動 =>  gsap 會與 scroll-behavior 發生衝突, 造成 scroll 卡頓 */
 html {
-    /* scroll-behavior: smooth;  */
+    scroll-behavior: smooth; 
 }
+
 
 section {
     width: 100vw;
@@ -73,9 +74,8 @@ h2 {
 
     font-family: "DFPZongYiW9-B5";
     font-weight: 400;
-    -webkit-text-stroke: 1px var(--primary-black); /* 邊框 */
+    /* -webkit-text-stroke: 1px var(--primary-black); */ /* 邊框 */
     color: var(--primary-white);
-    opacity: 0.5;
 }
 p {
     /* jf-openhuninn-2.0 */
@@ -139,6 +139,19 @@ a {
     transform: translateX(100px);
 }
 /* 滑鼠滾動 on scroll 動畫效果 end */
+
+/* scroll section h2標題 底色變色 start */
+
+
+span {
+    transition: all 0.5s ease;
+}
+span.fade { 
+    color: var(--primary-blue);
+}
+/* scroll section h2標題 底色變色 end */
+
+
 /* =========================== 共用設定 end =========================== */
 
 
@@ -148,7 +161,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 2% auto;
+    margin: 0.5% auto;
     position: fixed;
     z-index: var(--z-index-top1-nav);
 }
@@ -178,10 +191,10 @@ nav .text-bounce-bottom-box .text-bounce-bottom {
     border-radius: 2.5px;
     background: var(--primary-blue);
 
-    animation: text-bounce-button-animation 1s linear;
+    /* animation: text-bounce-button-animation 1s linear; */
 
 }
-
+/* 
 @keyframes text-bounce-button-animation {
     20% {
         width: 5px;
@@ -208,7 +221,7 @@ nav .text-bounce-bottom-box .text-bounce-bottom {
         width: 60px;
     }
 }
-
+ */
 nav .nav-centent {
     min-width: 100px;
     display: flex;
@@ -328,7 +341,7 @@ nav .nav-centent .item-list .item img {
     background: var(--light-orange);
 }
 
-.price-work-flow .text-color-transition {
+.price-work-flow .price-work-flow-title {
     margin-top: 1%;
 
     font-size: 64px;
@@ -356,6 +369,8 @@ nav .nav-centent .item-list .item img {
 }
 
 .price-work-flow p {
+    max-width: 80vw;
+
     color: var(--gray);
     line-height: 25px;
     font-size: 20px;    
@@ -367,6 +382,7 @@ nav .nav-centent .item-list .item img {
 
 /* 報價流程-輪播圖 start */
 .price-work-flow-slide {
+    max-width: 80vw;
     margin-top: 2%;
     display: flex;
     flex-direction: column;
@@ -400,6 +416,25 @@ nav .nav-centent .item-list .item img {
 
     overflow: hidden;
 
+}
+
+.price-work-flow-bounce-bottom-box {
+    height: 5px;
+    width: 7%;
+    position: relative;
+    bottom: -1%;
+    left: 4%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.price-work-flow-bounce-bottom {
+    height: 5px;
+    width: 100%;
+    border-radius: 2.5px;
+    background: var(--primary-blue);
 }
 
 .slide h3 {
@@ -478,6 +513,10 @@ input[type="radio"] {
     transition: 0.25s;
 }
 
+.flow-button-icon-list label:nth-of-type(1) {
+    width: 20px;
+}
+
 
 /* 服務項目列表 start */
 .service-list {
@@ -486,7 +525,7 @@ input[type="radio"] {
     align-items: center;
 }
 
-.service-list .text-color-transition {
+.service-list .service-list-title {
     margin-top: 5%;
     font-size: 64px;
     font-family: "DFPZongYiW9-B5";
@@ -566,7 +605,7 @@ input[type="radio"] {
     z-index: var(--z-index-top4-background);
 }
 
-.portfolio-block .text-color-transition {
+.portfolio-block .portfolio-block-title {
     margin-top: 1%;
 
     font-size: 64px;
@@ -835,11 +874,11 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
     }
 
     /* 上方導覽列 start */
-    .text-bounce-bottom-container .text-bounce-bottom-box {
+    nav .text-bounce-bottom-container .text-bounce-bottom-box {
         left: 37%;
         width: 7px;
     }
-    .text-bounce-bottom-container .nav-centent .item-list label {
+    nav .text-bounce-bottom-container .nav-centent .item-list label {
         display: none;
     }
     /* 上方導覽列 end */
@@ -853,7 +892,7 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
 
 
     /* 報價流程 start */
-    .price-work-flow .text-color-transition { /* h2 */
+    .price-work-flow .price-work-flow-title { /* h2 */
         font-size: 50px;
     }
     .price-work-flow img {
@@ -866,6 +905,11 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
         font-size: 25px;
     }
 
+    .price-work-flow-bounce-bottom-box {
+        width: 4%;
+        left: 1%;
+    }
+
     .price-work-flow .price-work-flow-slide .flow-slide-list {
         width: 380px;
         height: 300px;
@@ -874,7 +918,7 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
 
 
     /* 服務項目列表 start */
-    .service-list .text-color-transition { /* h2 */
+    .service-list .service-list-title { /* h2 */
         font-size: 50px;
     }
     .service-list img {
@@ -895,7 +939,7 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
 
 
     /* 作品集 start */
-    .portfolio-block .text-color-transition { /* h2 */
+    .portfolio-block .portfolio-block-title { /* h2 */
         font-size: 50px;
     }
     .portfolio-block p { 
