--- a/docs/style.css
+++ b/docs/style.css
@@ -51,6 +51,7 @@ html {
 section {
     width: 100vw;
     height: 100vh;
+    min-height: 900px; /* 避免 瀏覽器 高度過矮 被擠壓破版 */
 
     display: flex;
     flex-direction: column;
@@ -141,8 +142,6 @@ a {
 /* 滑鼠滾動 on scroll 動畫效果 end */
 
 /* scroll section h2標題 底色變色 start */
-
-
 span {
     transition: all 0.5s ease;
 }
@@ -153,8 +152,6 @@ span.fade {
 
 
 /* =========================== 共用設定 end =========================== */
-
-
 /* 上方導覽列 start */
 nav {
     width: 100vw;
@@ -192,7 +189,6 @@ nav .text-bounce-bottom-box .text-bounce-bottom {
     background: var(--primary-blue);
 
     /* animation: text-bounce-button-animation 1s linear; */
-
 }
 /* 
 @keyframes text-bounce-button-animation {
@@ -271,12 +267,44 @@ nav .nav-centent .item-list .item img {
 
 
 /* 網頁標頭 過場動畫 start */
+.header-animation {
+    height: 200vh;
+}
+
+.header-animation .head-right-little-img {
+    position: absolute;
+    top: 8vh;
+    right: 15vw;
+}
+
+.header-animation .head-left-img {
+    position: absolute;
+    top: 55vh;
+    left: 7vw;
+}
+
+.header-animation .head-right-img {
+    position: absolute;
+    top: 115vh;
+    right: 12vw;
+}
+
+.header-animation .header-animation-text-content {
+    position: fixed;
+    bottom: 25vh;
+}
+
+.icon-double-down-arr {
+    position: fixed;
+    left: 50%;
+    bottom: 10%;
+    transition: 2s;
+    cursor: pointer; /* 滑鼠游標 */
+    z-index: var(--z-index-top2-click);
+}
+
 .header-animation .move-from-right {
-    /* 在右側 */
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    position: relative;
 }
 
 .header-animation .center-title {
@@ -289,46 +317,45 @@ nav .nav-centent .item-list .item img {
 }
 
 /* 網頁標頭 移動標頭 效果 */
-.slogan-big-move {
-    display: flex;
+.move-slogn-container {
+    width: 95vw;
+    height: 10vh;
+    position: relative;
     font-size: 125px;
     font-family: "DFPZongYiW9-B5";
     font-weight: 400;
     -webkit-text-stroke: 1px var(--primary-black); /* 邊框 */
     color: var(--primary-white);
-    opacity: 0.5;
+    opacity: 0.7;
 }
-.header-animation .move-from-right .move-from-right-padding {
-    width: 0;
-    animation: slogan-big-move-animation 2s linear;
+.move-slogn-container .move-slogn-right {
+    position: absolute;
+    white-space:nowrap;
+    right: 0;
+    animation: move-slogn-right 2s linear;
 }
-.header-animation .move-from-left {
-    /* 在左側 */
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-.header-animation .move-from-left .move-from-left-padding {
-    width: 0;
-    animation: slogan-big-move-animation 2s linear;
-}
-@keyframes slogan-big-move-animation {
-    50% {
-        width: 30px;
-    }
-    100% {
-        width: 0px;
-    }
+.move-slogn-container .move-slogn-left {
+    position: absolute;
+    white-space:nowrap;
+    left: 0;
+    animation: move-slogn-left 2s linear;
 }
 
-.icon-double-down-arr {
-    position: absolute;
-    left: 50%;
-    bottom: 10%;
-    transition: 2s;
-    cursor: pointer; /* 滑鼠游標 */
-    z-index: var(--z-index-top2-click);
+@keyframes move-slogn-right {
+    50% {
+        right: 30px;
+    }
+    100% {
+        right: 0px;
+    }
+}
+@keyframes move-slogn-left {
+    50% {
+        left: 30px;
+    }
+    100% {
+        left: 0px;
+    }
 }
 /* 網頁標頭 過場動畫 end */
 
@@ -338,6 +365,7 @@ nav .nav-centent .item-list .item img {
     => 下方輪播圖 高度需 RWD, 否則易跑版
 */
 .price-work-flow {
+    position: relative;
     background: var(--light-orange);
 }
 
@@ -354,7 +382,7 @@ nav .nav-centent .item-list .item img {
 
 .price-work-flow .left-little-img {
     position: absolute;
-    top: 135vh;
+    top: 35vh;
     left: 10vw;
     width: 100px;
     z-index: var(--z-index-top4-background);
@@ -362,7 +390,7 @@ nav .nav-centent .item-list .item img {
 
 .price-work-flow .right-img {
     position: absolute;
-    top: 110vh;
+    top: 10vh;
     right: 5vw;
     width: 500px;
     z-index: var(--z-index-top4-background);
@@ -397,7 +425,9 @@ nav .nav-centent .item-list .item img {
     align-items: center;
     min-width: 350px;
     padding: 5px 0;
+
     z-index: var(--z-index-top2-click);
+    position: relative;
 }
 
 .price-work-flow-slide .flow-tab-list label {
@@ -520,6 +550,7 @@ input[type="radio"] {
 
 /* 服務項目列表 start */
 .service-list {
+    position: relative; /* 讓背景圖 定位 */
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -546,7 +577,7 @@ input[type="radio"] {
 
 .service-list .left-block .left-img {
     position: absolute;
-    top: 210vh;
+    top: 10vh;
     left: 15vw;
 }
 
@@ -582,7 +613,7 @@ input[type="radio"] {
 
 .service-list .right-block .right-logo {
     position: absolute;
-    top: 240vh;
+    top: 40vh;
     right: 20vw;
     width: 200px;
     z-index: var(--z-index-top4-background);
@@ -827,6 +858,17 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
 
 /* 通用 RWD */
 @media (max-width: 1500px) {
+    
+
+    /* 網頁標頭 過場動畫 start */
+    .header-animation .move-slogn-container {
+        font-size: 90px;        
+    }
+    .header-animation h1 {
+        font-size: 95px;       
+    }
+    /* 網頁標頭 過場動畫 end */
+
     /* 作品集 電腦輪播圖 */
     .portfolio-block {
         height: 105vh;
@@ -866,9 +908,6 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
     * {
         text-align: center;
     }
-    h1 {
-        font-size: 60px;
-    }
     img {
         max-width: 500px;
     }
@@ -885,8 +924,11 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
     
 
     /* 網頁標頭 過場動畫 start */
-    .header-animation .slogan-big-move {
+    .header-animation .move-slogn-container {
         font-size: 75px;        
+    }
+    .header-animation h1 {
+        font-size: 60px;       
     }
     /* 網頁標頭 過場動畫 end */
 
