--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -163,6 +163,13 @@ nav {
     z-index: var(--z-index-top1-nav);
 }
 
+nav .fa-bars {
+    font-size: 30px;
+    color: var(--primary-blue);
+    display: none;
+    cursor: pointer;
+}
+
 nav .text-bounce-bottom-container {
     display: flex;
     flex-direction: column;
@@ -175,7 +182,7 @@ nav .text-bounce-bottom-box {
     width: 7%;
     position: relative;
     top: -15%;
-    left: 25%;
+    left: 20%;
 
     display: flex;
     flex-direction: column;
@@ -187,37 +194,8 @@ nav .text-bounce-bottom-box .text-bounce-bottom {
     width: 100%;
     border-radius: 2.5px;
     background: var(--primary-blue);
+}
 
-    /* animation: text-bounce-button-animation 1s linear; */
-}
-/* 
-@keyframes text-bounce-button-animation {
-    20% {
-        width: 5px;
-    }
-    40% {
-        width: 50px;
-    }
-    50% {
-        width: 10px;
-    }
-    60% {
-        width: 50px;
-    }
-    70% {
-        width: 10px;
-    }
-    80% {
-        width: 50px;
-    }
-    90% {
-        width: 40px;
-    }
-    100% {
-        width: 60px;
-    }
-}
- */
 nav .nav-centent {
     min-width: 100px;
     display: flex;
@@ -234,8 +212,8 @@ nav .nav-centent {
 }
 
 nav .nav-centent .logo img {
-    width: 45px;
-    padding: 0 20px;
+    width: 40px;
+    padding: 0 0 0 20px;
 }
 
 nav .nav-centent .item-list {
@@ -252,12 +230,11 @@ nav .nav-centent .item-list .item {
     justify-content: center;
     align-items: center;
     padding: 5px 10px;
+    cursor: pointer;
+    white-space:nowrap;
+    transition: 1s;
 }
 
-
-nav .nav-centent .item-list .item a{
-    padding: 0 5px;
-}
 
 nav .nav-centent .item-list .item img {
     padding: 0 5px;
@@ -300,7 +277,7 @@ nav .nav-centent .item-list .item img {
     bottom: 10%;
     transition: 2s;
     cursor: pointer; /* 滑鼠游標 */
-    z-index: var(--z-index-top2-click);
+    z-index: var(--z-index-top1-nav);
 }
 
 .header-animation .move-from-right {
@@ -831,6 +808,7 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
 /* 頁尾 start */
 .footer {
     height: 25vh; /* 高度占瀏覽器 1/4 */
+    min-height: 200px; /* 避免 瀏覽器 高度過矮 被擠壓破版 */
     background: var(--primary-blue);
     color: var(--primary-white);
 }
@@ -909,13 +887,16 @@ input[type="radio"]:nth-of-type(12):checked ~.portfolio-slide{
         text-align: center;
     }
     img {
-        max-width: 500px;
+        max-width: 300px;
     }
 
     /* 上方導覽列 start */
     nav .text-bounce-bottom-container .text-bounce-bottom-box {
-        left: 37%;
+        left: 29%;
         width: 7px;
+    }
+    nav .text-bounce-bottom-container .nav-centent {
+        width: 350px;
     }
     nav .text-bounce-bottom-container .nav-centent .item-list label {
         display: none;
