--- a/docs/style.css
+++ b/docs/style.css
@@ -51,7 +51,7 @@ html {
 section {
     width: 100vw;
     height: 100vh;
-    min-height: 900px; /* 避免 瀏覽器 高度過矮 被擠壓破版 */
+    min-height: 400px; /* 避免 瀏覽器 高度過矮 被擠壓破版 */
 
     display: flex;
     flex-direction: column;
@@ -269,6 +269,7 @@ nav .nav-centent .item-list .item img {
 .header-animation .header-animation-text-content {
     position: fixed;
     bottom: 25vh;
+    overflow: hidden;
 }
 
 .icon-double-down-arr {
@@ -295,8 +296,8 @@ nav .nav-centent .item-list .item img {
 
 /* 網頁標頭 移動標頭 效果 */
 .move-slogn-container {
-    width: 95vw;
-    height: 10vh;
+    width: 100vw;
+    height: 15vh;
     position: relative;
     font-size: 125px;
     font-family: "DFPZongYiW9-B5";
@@ -304,6 +305,7 @@ nav .nav-centent .item-list .item img {
     -webkit-text-stroke: 1px var(--primary-black); /* 邊框 */
     color: var(--primary-white);
     opacity: 0.7;
+    overflow: hidden;
 }
 .move-slogn-container .move-slogn-right {
     position: absolute;
