feat [公司形象網站] => 網頁標頭 h1 黃色水平位移

--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -70,6 +70,10 @@ h1 {
     font-weight: 400;
     font-style: normal;
 }
+span.fadeanimate {
+    color: var(--primary-orange);
+    transition: 0.5s;
+}
 h2 {
     font-size: 64px;
 
