--- a/portfolio/PersonalPortfolio/css/style.css
+++ b/portfolio/PersonalPortfolio/css/style.css
@@ -112,7 +112,7 @@ section {
   left: 0;
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
   background: crimson;   
-  height: .8rem; 
+  height: 1.5rem; 
   width: 0;
   z-index: 100;
 }
@@ -353,8 +353,8 @@ section {
 .blogs .box-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(31rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
+  -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 1.5rem;
 }
 
