feat  作品集 [文案]  [咖啡] =>  優化 文案 + 內容

--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -8,7 +8,7 @@
     src: url("./fonts/DFPZongYiW9-B5.TTF") format("truetype");
 }
 @font-face {
-    font-family: "jf-openhuninn-2.0"; /* 自訂義 */
+    font-family: "jf-openhuninn-2.0"; /* 自訂義 粉圓字體 */
     src: url("./fonts/jf-openhuninn-2.0.ttf") format("truetype");
 }
 
