--- a/portfolio/CoffeeWebsite/css/style.css
+++ b/portfolio/CoffeeWebsite/css/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@font-face {
+    font-family: "jf-openhuninn-2.0"; /* 自訂義 粉圓字體 */
+    src: url("../fonts/jf-openhuninn-2.0.ttf") format("truetype");
+}
 
 :root{
     --main-color:#d3ad7f;
@@ -8,7 +12,8 @@
 }
 
 *{
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
+    font-family: "jf-openhuninn-2.0", sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
     outline: none; border:none;
@@ -143,9 +148,17 @@ section{
     height: 6rem;
 }
 
-.header .navbar a{
+.header .logo  {
+    font-size: 3rem;
+    color: #fff;
+}
+.header .logo span {
+    color: var(--main-color);
+}
+
+.header .navbar a {
     margin:0 1rem;
-    font-size: 1.8rem;
+    font-size: 2rem;
     color:#fff;
 }
 
